# lib-cove-oc4ids

./: .git-blame-ignore-revs  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  README.rst  contributing.md  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  setup.cfg  setup.py  update_requirements.sh
.github/workflows/: automerge.yml  ci.yml  pypi.yml
libcoveoc4ids/: __main__.py  additional_check.py  additional_checks.py  api.py  check_classes.py  common_checks.py  config.py  conformance_checks.py  schema.py
libcoveoc4ids/cli/: __main__.py
tests/: generate_test_data.py  test_api.py  test_cli.py  utils.py
tests/fixtures/: example-additional-checks-no-parties.json  example-additional-checks-no-projects.json  example-additional-checks.json  example-additional-codes.json  example-data.json  invalid-json.json  rubbish.json  validation-errors-package.json
