[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "libcoveoc4ids"
version = "0.6.0"
authors = [{name = "Open Contracting Partnership and Open Data Services Co-operative Limited", email = "data@open-contracting.org"}]
description = "A data review library for the Open Contracting for Infrastructure Data Standards (OC4IDS)"
readme = "README.rst"
license = {text = "AGPLv3"}
urls = {Homepage = "https://github.com/open-contracting/lib-cove-oc4ids"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click",
    "libcove>=0.32",
    "libcoveocds>=0.12.7",
]

[project.optional-dependencies]
perf = ["orjson>=3"]
test = [
    "coverage",
    "pytest",
]

[project.scripts]
libcoveoc4ids = "libcoveoc4ids.__main__:main"

[tool.setuptools.packages.find]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 119
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
