[metadata]
name = libcoveoc4ids
version = 0.5.0
author = Open Contracting Partnership and Open Data Services Co-operative Limited
author_email = data@open-contracting.org
license = AGPLv3
description = A data review library for the Open Contracting for Infrastructure Data Standards (OC4IDS)
url = https://github.com/open-contracting/lib-cove-oc4ids
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires =
    libcoveocds>=0.12.7
    libcove>=0.32

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    libcoveoc4ids = libcoveoc4ids.__main__:main

[options.extras_require]
perf =
    orjson>=3
test =
    coveralls
    pytest
    pytest-cov
    isort
